--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -5,10 +5,12 @@ itemGroup.soulcraft_tab=Soulcraft
 // Items
 item.reaping_seeds.name=Reaping Seeds
 item.reaping_beans.name=Reaping Beans
+item.soul_ingot.name=Soul Ingot
 
 // Blocks
 
 // Tools
+item.reaping_scythe.name=Reaping Scythe
 
 // Armor
 
