--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -23,3 +23,7 @@ item.reaping_scythe.name=Reaping Scythe
 
 // Tile Entities
 tile.soul_skull.name=Tile Skull
+
+//World
+generator.PURGATORY=Purgatory
+generator.PURGATORY.info=Bridge between worlds.
