--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -28,3 +28,5 @@ tile.soul_skull.name=Tile Skull
 //World
 generator.PURGATORY=Purgatory
 generator.PURGATORY.info=Bridge between worlds.
+
+// Changes
