Added bat head to lang

--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -11,6 +11,7 @@ item.soul_ingot.name=Soul Ingot
 item.soul_skull.blaze.name=Blaze Head
 item.soul_skull.cow.name=Cow Head
 item.soul_skull.chicken.name=Chicken Head
+item.soul_skull.bat.name=Bat Head
 
 // Blocks
 
