my lang changes

--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -29,3 +29,8 @@ tile.soul_skull.name=Tile Skull
 generator.PURGATORY=Purgatory
 generator.PURGATORY.info=Bridge between worlds.
 
+//New stuff for new stuffy
+
+
+
+
