Obj Seed. Testing obj mtl files

--- a/src/main/resources/assets/sc/lang/en_us.lang
+++ b/src/main/resources/assets/sc/lang/en_us.lang
@@ -7,6 +7,7 @@ item.soul_seeds.name=Soul Seeds
 item.soul_essence.name=Soul Essence
 item.soul_seeds_stem.name=Soul Seeds Stem
 item.pedestal_seeds.name=Pedestal Seeds
+item.obj_seeds.name=Obj Seeds
 item.soul_ingot.name=Soul Ingot
 
 // Heads
