Pixie sparkles, Husk Starter & head bug fixes

--- a/src/main/resources/assets/ensoulomancy/lang/en_us.lang
+++ b/src/main/resources/assets/ensoulomancy/lang/en_us.lang
@@ -32,8 +32,8 @@ item.soul_skull.mule.name=Mule Head
 item.soul_skull.skeletonhorse.name=Skeleton Horse Head
 item.soul_skull.zombiehorse.name=Zombie Horse Head
 item.soul_skull.husk.name=Husk Head
-item.soul_skull.evokervillager.name=Evoker Head
-item.soul_skull.vindicatorvillager.name=Vindicator Head
+item.soul_skull.evokerillager.name=Evoker Head
+item.soul_skull.vindicatorillager.name=Vindicator Head
 item.soul_skull.lavaslime.name=Magma Cube Head
 item.soul_skull.llama.default.name=Llama Head
 item.soul_skull.llama.llama_brown.name=Brown Llama Head
@@ -50,7 +50,7 @@ item.soul_skull.parrot.parrot_grey.name=Grey Parrot Head
 item.soul_skull.parrot.parrot_red_blue.name=Red-Blue Parrot Head
 item.soul_skull.parrot.parrot_yellow_blue.name=Yellow-Blue Parrot Head
 item.soul_skull.pig.name=Pig Head
-item.soul_skull.pigzombie.name=Zombie Pig Head
+item.soul_skull.pigzombie.name=Zombie Pigman Head
 item.soul_skull.polarbear.name=Polar Bear Head
 item.soul_skull.rabbit.black.name=Black Rabbit Head
 item.soul_skull.rabbit.brown.name=Brown Rabbit Head
